[package]
name = "gen_golden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_golden"
path = "src/main.rs"

[dependencies]
miniscript = { path = "../../../../../rust-miniscript", features = ["std"] }
bitcoin = { version = "0.32.6", default-features = false, features = ["std"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
